--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     width:400px;
     position:relative;
     border: 1px solid black;
-    background: url(bg1.ong) ;
+    background: url(bg1.jpg) ;
     background-size: cover;
     margin: 1rem auto;
     overflow:hidden;
